<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deck of Cards </string>
    <string name="action_settings">Settings</string>
    <string name="settings_sort">Sort</string>
    <string name="settings_redeal">Re-deal</string>
    <string name="settings_shuffledeck">Shuffle Deck</string>
    <string name="NO_SUIT_ACE_HIGH">By face, ace high</string>
    <string name="NO_SUIT_ACE_LOW">By face, ace low</string>
    <string name="S_H_D_C_ACE_HIGH">By suit, ace high</string>
    <string name="S_H_D_C_ACE_LOW">By suit, ace low</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_lobby">Multiplayer</string>
    <string name="lobby_available_peers">Available players</string>
    <string name="lobby_connected_peers">Connected players</string>
    <string name="lobby_refresh_peers">Refresh</string>
    <string name="lobby_start_game">Start Game</string>
    <string name="lobby_solitaire">Solitaire</string>
    <string name="lobby_chat">Game</string>
    <string name="join_game">Join Game</string>
    <string name="menu_help">Help</string>
    <string name="menu_shop">Shop</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_headline">About</string>
    <string name="twitter">Share on Twitter</string>
    <string name="facebook">Share on Facebook</string>
    <string name="about_body">
This app was made as part of the MobServ course at EURECOM, and the source code is freely available at github.
\n\nVectorized Playing Cards 1.3-\nhttp://code.google.com/p/vectorized-playing-cards/
\nCopyright 2011 - Chris Aguilar
\nLicensed under LGPL 3 - www.gnu.org/copyleft/lesser.html</string>
	<string name="disconnect">Disconnect</string>
	<string name="startGame">Start Game</string>
    
</resources>
