<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/settings_sort"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings_sort">
        <menu><item
                android:id="@+id/S_D_H_C_ACE_HIGH"
            	android:title="@string/S_H_D_C_ACE_HIGH" />
            <item 
                android:id="@+id/NO_SUIT_ACE_HIGH" 
                android:title="@string/NO_SUIT_ACE_HIGH" />
            
            <item android:id="@+id/S_D_H_C_ACE_LOW" android:title="@string/S_H_D_C_ACE_LOW"/>
            <item android:id="@+id/NO_SUIT_ACE_LOW" android:title="@string/NO_SUIT_ACE_LOW"/>
            
        </menu>
    </item>
    <item android:id="@+id/settings_redeal" android:title="@string/settings_redeal"></item>
    <group android:id="@+id/group1"></group>

</menu>
